--- a/README.html
+++ b/README.html
@@ -324,7 +324,7 @@ $(document).ready(function () {
 </div>
 <div id="installation-instructions" class="section level2">
 <h2>Installation instructions</h2>
-<p><strong>Note (2018/09/6):</strong> This package is currently in the last phase of testing and polishing the API before I submit it to <a href="https://cran.r-project.org">CRAN</a>. It’s mostly stable now and you can definitely use it for your own work, but if you decide to use it, please make sure to check back here for instructions on how to install the officially released version.</p>
+<p><strong>Note (2018/09/06):</strong> This package is currently in the last phase of testing and polishing the API before I submit it to <a href="https://cran.r-project.org">CRAN</a>. You can definitely safely use it for your own work, but please make sure to check back here for instructions on how to install the officially released version. You can also follow me on <a href="https://www.twitter.com/fleventy5">Twitter</a> if you want to stay updated.</p>
 <p>To install <code>admixr</code> from Github you need to install the package <code>devtools</code> first. You can simply run:</p>
 <pre class="r"><code>install.packages(&quot;devtools&quot;)
 devtools::install_github(&quot;bodkan/admixr&quot;)</code></pre>
